--- a/contactPage.html
+++ b/contactPage.html
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div>
-                <h2>Cutomer Support</h2>
+                <h2>Customer Support</h2>
                 <div class="customer-support">
                     <div>
                         <h3>Customer Support</h3>
