--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 						<li class="active"><a href="#home">Home</a></li>
 						<li><a href="#about">About</a></li>
 						<li><a href="#services">Services</a></li>
-						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#projects">Projects</a></li>
+						<li><a href="contactPage.html">Contact</a></li>
 					</ul>
 				</nav>
 				<button class="menu-toggle" aria-label="Toggle navigation menu">
@@ -229,7 +229,7 @@
 			</div>
 		</section>
 
-		<section id="portfolio" class="portfolio">
+		<section id="projects" class="portfolio">
 			<h2>Our Portfolio</h2>
 			<div class="portfolio-container">
 				<div class="portfolio-card">
@@ -250,64 +250,7 @@
 		<section id="cta" class="cta">
 			<h2>Ready to Transform Your Ideas?</h2>
 			<p>Contact Codemantix Collective to build something amazing together.</p>
-			<a href="#contact" class="btn">Start Your Project</a>
-		</section>
-
-		<section id="contact" class="contact">
-			<h2>Contact Us</h2>
-			<div class="contact-container">
-				<form
-					class="contact-form"
-					action="https://formspree.io/f/xvgqqwzy"
-					method="POST"
-				>
-					<div class="form-group">
-						<label for="name">Name <span class="required">*</span></label>
-						<input
-							type="text"
-							id="name"
-							name="name"
-							placeholder="Your Name"
-							required
-						/>
-					</div>
-					<div class="form-group">
-						<label for="email">Email <span class="required">*</span></label>
-						<input
-							type="email"
-							id="email"
-							name="email"
-							placeholder="Your Email"
-							required
-						/>
-					</div>
-					<div class="form-group">
-						<label for="phoneNumber">Phone Number</label>
-						<input
-							type="tel"
-							id="phoneNumber"
-							name="phoneNumber"
-							placeholder="Phone Number"
-						/>
-					</div>
-					<div class="form-group">
-						<label for="message">Message <span class="required">*</span></label>
-						<textarea
-							id="message"
-							name="message"
-							rows="5"
-							placeholder="Your Message"
-							required
-						></textarea>
-					</div>
-					<input
-						type="hidden"
-						name="_next"
-						value="https://codemantix.com/#contact"
-					/>
-					<button type="submit" class="form-btn">Send Message</button>
-				</form>
-			</div>
+			<a href="contactPage.html" class="btn">Start Your Project</a>
 		</section>
 
 		<footer>
@@ -325,7 +268,7 @@
 						<li><a href="#about">About</a></li>
 						<li><a href="#services">Services</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="contactPage.html">Contact</a></li>
 					</ul>
 				</div>
 				<div class="footer-contact">
