--- a/contactPage.html
+++ b/contactPage.html
@@ -19,39 +19,40 @@
 </head>
 
 <body>
-    <div class="header-section">
-        <div class="logo">
-            <img src="image/Codemantix logo(2).png" alt="Codemantix Collective Logo" />
-        </div>
-        <nav>
-            <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <button class="menu-toggle" aria-label="Toggle navigation menu">
+    <header>
+        <div class="header-section">
+            <div class="logo">
+                <img src="image/Codemantix logo(2).png" alt="Codemantix Collective Logo" />
+            </div>
+            <nav>
+                <ul>
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <button class="menu-toggle" aria-label="Toggle navigation menu">
 					<i class="fas fa-bars"></i>
 				</button>
-    </div>
+        </div>
     </header>
     <main>
         <section>
             <h1>Contact Us</h1>
-            <p>Email, Call, Complete the form to learn how <br> Codemantix Collective solve your problem.</p>
+            <p>Email, Call, Complete the form to learn how <br> Codemantix Collective can solve your problem.</p>
             <div class="footer-contact">
                 <ul>
                     <li>
                         <i class="fas fa-envelope"></i>
-                        <a href="mailto:codemantixcollective@gmail.com">codemantixcollective@gmail.com</a
+                        <a class="fasfa" href="mailto:codemantixcollective@gmail.com">codemantixcollective@gmail.com</a
 							>
 						</li>
 						<li>
 							<i class="fas fa-phone"></i>
-							<a href="tel:+2349014039678">09014039678</a> /
-                        <a href="tel:+2348057032993">08057032993</a>
+							<a class="fasfa" href="tel:+2349014039678">09014039678</a> /
+                        <a class="fasfa" href="tel:+2348057032993">08057032993</a>
                     </li>
                 </ul>
             </div>
@@ -65,7 +66,7 @@
                     </div>
                     <div>
                         <h3>FeedBack and Suggestions</h3>
-                        <p>We value your feedback and are continuously doing our best to give you the best service. Your input in crucial in Codemantix Collective</p>
+                        <p>We value your feedback and we are continuously doing our best to give you the best service. Your input in crucial in Codemantix Collective</p>
                     </div>
                 </div>
             </div>
@@ -73,6 +74,7 @@
         <section id="contact" class="contact">
             <div class="contact-container">
                 <form class="contact-form" action="https://formspree.io/f/xvgqqwzy" method="POST">
+                    <h2>Get in Touch</h2>
                     <div class="form-group">
                         <label for="name">Name <span class="required">*</span></label>
                         <input type="text" id="name" name="name" placeholder="Your Name" required />
@@ -82,8 +84,31 @@
                         <input type="email" id="email" name="email" placeholder="Your Email" required />
                     </div>
                     <div class="form-group">
-                        <label for="phoneNumber">Phone Number</label>
-                        <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="Phone Number" />
+                        <label for="phoneNumber">Phone Number <span class="required">*</span></label>
+                        <div style="display: flex; gap: 5px; align-items: center;">
+                            <select id="countryCode" name="countryCode">
+                                <option value="+234" selected>🇳🇬 +234</option>
+                                <option value="+1">🇺🇸 +1</option>
+                                <option value="+44">🇬🇧 +44</option>
+                                <option value="+91">🇮🇳 +91</option>
+                                <option value="+27">🇿🇦 +27</option>
+                                <option value="+49">🇩🇪 +49</option>
+                                <option value="+33">🇫🇷 +33</option>
+                                <option value="+61">🇦🇺 +61</option>
+                                <option value="+81">🇯🇵 +81</option>
+                                <option value="+86">🇨🇳 +86</option>
+                                <!-- Add more as needed -->
+                            </select>
+                            <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="Phone Number" style="flex: 1;" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="radio" aria-required="true">How Can We Help You <span class="required">*</span></label>
+                        <div class="radio">
+                            <label><input type="radio" name="service" value="Web Development" required> Web Development</label>
+                            <label><input type="radio" name="service" value="UX/UI Design"> UX/UI Design</label>
+                            <label><input type="radio" name="service" value="Graphics Design"> Graphics Design</label>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="message">Message <span class="required">*</span></label>
