worked on the nav bar and the hero section

--- a/contactPage.html
+++ b/contactPage.html
@@ -30,9 +30,12 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class="first-contactlink"><a href="contactPage.html">Contact</a></li>
                 </ul>
             </nav>
+            <ul>
+                <li class="second-contactlink"><a href="contactPage.html">Contact</a></li>
+            </ul>
             <button class="menu-toggle" aria-label="Toggle navigation menu">
 					<i class="fas fa-bars"></i>
 				</button>
