worked on service page

--- a/contactPage.html
+++ b/contactPage.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="servicepage.html">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li class="first-contactlink"><a href="contactPage.html">Contact</a></li>
                 </ul>
