--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="CSS/Stylesheet.css" />
+    <link rel="stylesheet" href="Contact-Page/ContactPage.css">
 </head>
 
 <body>
@@ -208,6 +209,9 @@
         <div class="footer-container">
             <div class="footer-logo">
                 <img src="image/Codemantix logo(2).png" alt="Codemantix Collective Logo" />
+                <p class="footer-description">
+                    Nigeria's leading innovation lab, delivering cutting-edge web, mobile, and software solutions to transform your business ideas into reality.
+                </p>
             </div>
             <div class="footer-links">
                 <h3>Quick Links</h3>
