--- a/contactPage.html
+++ b/contactPage.html
@@ -52,11 +52,11 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="servicepage.html">Services</a></li>
                         <li><a href="#projects">Projects</a></li>
-                        <li class="first-contactlink"><a href="contactPage.html">Contact</a></li>
+                        <li class="first-contactlink"><a href="#">Contact</a></li>
                     </ul>
                 </nav>
                 <ul>
-                    <li class="second-contactlink"><a href="contactPage.html">Contact</a></li>
+                    <li class="second-contactlink"><a href="#">Contact</a></li>
                 </ul>
                 <button class="menu-toggle" aria-label="Toggle navigation menu">
 					<i class="fas fa-bars"></i>
@@ -246,7 +246,7 @@
                         <ul class="footer-list">
                             <li><a href="index.html" class="footer-link">Home</a></li>
                             <li><a href="#about" class="footer-link">About</a></li>
-                            <li><a href="#services" class="footer-link">Services</a></li>
+                            <li><a href="servicepage.html" class="footer-link">Services</a></li>
                             <li><a href="#portfolio" class="footer-link">Portfolio</a></li>
                             <li><a href="#contact" class="footer-link">Contact</a></li>
                         </ul>
