--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <nav>
                 <ul>
-                    <li class="active"><a href="#home">Home</a></li>
+                    <li class="active"><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="servicepage.html">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
@@ -45,157 +45,132 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>
-                Welcome to <br />
-                <span>Codemantix Collective</span>
-            </h1>
-            <p>
-                Nigeria's leading innovation lab, crafting cutting-edge web, mobile, and software solutions. Partner with us to turn your vision into reality.
-            </p>
-            <a href="#contact" class="btn">Get in Touch</a>
+            <h1>Innovation Lab</h1>
+            <h2>Codemantix Collective</h2>
+            <p>Nigeria's leading innovation lab, crafting cutting-edge web, mobile, and software solutions. Partner with us to turn your vision into reality.</p>
+            <a href="contactPage.html" class="btn">Learn More</a>
         </div>
-        <div class="hero-img">
-            <img src="image/Hero-img.png" alt="Hero image">
+        <!-- <div class="hero-nav">
+            <i class="fas fa-chevron-left"></i>
+            <i class="fas fa-chevron-right"></i>
+        </div> -->
+    </section>
+
+    <section class="welcome">
+        <div class="welcome-content">
+            <h2>Welcome to Codemantix Collective</h2>
+            <p>Codemantix Collective is a Nigeria-based innovation lab connecting clients with expert developers, designers, and strategists. Born from collaborative code sprints, we deliver tailored web, mobile, and software solutions. Empowering creators
+                and clients through innovation, community, and multidisciplinary collaboration.</p>
+            <a href="#about" class="btn-read-more">Read More</a>
         </div>
     </section>
 
-    <section id="about" class="about">
-        <h2>About Us</h2>
-        <div class="about-container">
-            <div class="about-card">
-                <h3>Who We Are</h3>
-                <p>
-                    <span>Codemantix Collective</span> is a Nigeria-based innovation lab connecting clients with expert developers, designers, and strategists. Born from collaborative code sprints, we deliver tailored web, mobile, and software solutions.
-                </p>
-            </div>
-            <div class="about-card">
-                <h3>Mission</h3>
-                <p>
-                    Empowering creators and clients through innovation, community, and multidisciplinary collaboration to craft transformative tech solutions.
-                </p>
-            </div>
-            <div class="about-card">
-                <h3>Vision</h3>
-                <p>
-                    Becoming a global hub where clients and creators unite to co-develop groundbreaking tech solutions, rooted in Nigeria.
-                </p>
-            </div>
+    <section class="about-triple">
+        <div class="triple-card">
+            <i class="fas fa-history"></i>
+            <h3>Our Story</h3>
+            <p>Born from collaborative code sprints in Nigeria, connecting clients with expert developers, designers, and strategists for transformative tech solutions.</p>
+        </div>
+        <div class="triple-card">
+            <i class="fas fa-bullseye"></i>
+            <h3>Our Mission</h3>
+            <p>Empowering creators and clients through innovation, community, and multidisciplinary collaboration to craft transformative tech solutions.</p>
+        </div>
+        <div class="triple-card">
+            <i class="fas fa-eye"></i>
+            <h3>Our Vision</h3>
+            <p>Becoming a global hub where clients and creators unite to co-develop groundbreaking tech solutions, rooted in Nigeria.</p>
         </div>
     </section>
 
-    <section id="features" class="features">
-        <h2>Our Features</h2>
-        <div class="features-container">
-            <div class="feature-card">
-                <i class="fas fa-users"></i>
-                <h3>Expert Team</h3>
-                <p>
-                    Top-tier developers, designers, and strategists dedicated to your success.
-                </p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-rocket"></i>
-                <h3>End-to-End Solutions</h3>
-                <p>From ideation to launch, we handle every step with precision.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-lightbulb"></i>
-                <h3>Innovation Driven</h3>
-                <p>Leveraging the latest technologies for standout solutions.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-handshake"></i>
-                <h3>Community Focused</h3>
-                <p>Empowering clients and creators to grow together.</p>
-            </div>
+    <section class="services">
+        <div class="services-header">
+            <h2>Our Services</h2>
+            <p>From ideation to launch, we handle every step with precision using the latest technologies.</p>
         </div>
-    </section>
-
-    <section id="services" class="services">
-        <h2>Our Services</h2>
-        <div class="services-container">
-            <div class="service-card">
-                <img src="image/coding.png" alt="Web Development Icon" loading="lazy" />
+        <div class="services-grid">
+            <div class="service-item">
+                <i class="fas fa-globe"></i>
                 <h3>Web Development</h3>
-                <p>
-                    Custom websites built with modern frameworks for performance and scalability.
-                </p>
             </div>
-            <div class="service-card">
-                <img src="image/web-design.png" alt="UX/UI Design Icon" loading="lazy" />
+            <div class="service-item">
+                <i class="fas fa-mobile-alt"></i>
+                <h3>Mobile Apps</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-palette"></i>
                 <h3>UX/UI Design</h3>
-                <p>Intuitive and beautiful designs for seamless user experiences.</p>
             </div>
-            <div class="service-card">
-                <img src="image/statistics.png" alt="Data Analytics Icon" loading="lazy" />
+            <div class="service-item">
+                <i class="fas fa-chart-line"></i>
                 <h3>Data Analytics</h3>
-                <p>
-                    Actionable insights through advanced data analysis and visualization.
-                </p>
             </div>
-            <div class="service-card">
-                <img src="image/graphic-design.png" alt="Graphic Design Icon" loading="lazy" />
-                <h3>Graphic Design</h3>
-                <p>Stunning visuals tailored to elevate your brand identity.</p>
+            <div class="service-item">
+                <i class="fas fa-cogs"></i>
+                <h3>Software Solutions</h3>
             </div>
-        </div>
-    </section>
-
-    <section id="why-choose-us" class="why-choose-us">
-        <h2>Why Choose Us?</h2>
-        <div class="why-container">
-            <div class="why-card">
-                <p>Proven track record of successful projects</p>
-            </div>
-            <div class="why-card">
-                <p>Transparent and agile project management</p>
-            </div>
-            <div class="why-card">
-                <p>Diverse network of tech talent</p>
-            </div>
-            <div class="why-card">
-                <p>Commitment to quality and innovation</p>
+            <div class="service-item">
+                <i class="fas fa-headset"></i>
+                <h3>Support & IT</h3>
             </div>
         </div>
     </section>
 
-    <section id="process" class="process">
-        <h2>Our Process</h2>
-        <div class="process-container">
-            <div class="process-step">
-                <h3>1. Discover</h3>
-                <p>We listen to your needs and define project goals.</p>
-            </div>
-            <div class="process-step">
-                <h3>2. Design</h3>
-                <p>Crafting intuitive and beautiful user experiences.</p>
-            </div>
-            <div class="process-step">
-                <h3>3. Develop</h3>
-                <p>Building robust solutions with modern technologies.</p>
-            </div>
-            <div class="process-step">
-                <h3>4. Deliver</h3>
-                <p>Launching your product with ongoing support.</p>
-            </div>
+    <section class="stats">
+        <div class="stats-item">
+            <i class="fas fa-calendar-alt"></i>
+            <h3>5+</h3>
+            <p>Years Experience</p>
+        </div>
+        <div class="stats-item">
+            <i class="fas fa-check-circle"></i>
+            <h3>50+</h3>
+            <p>Completed Projects</p>
+        </div>
+        <div class="stats-item">
+            <i class="fas fa-users"></i>
+            <h3>30+</h3>
+            <p>Total Clients</p>
+        </div>
+        <div class="stats-item">
+            <i class="fas fa-trophy"></i>
+            <h3>10+</h3>
+            <p>Awards Won</p>
         </div>
     </section>
 
     <section id="projects" class="portfolio">
-        <h2>Our Portfolio</h2>
-        <div class="portfolio-container">
-            <div class="portfolio-card">
-                <h3>Project One</h3>
-                <p>A responsive e-commerce platform with advanced features.</p>
+        <div class="portfolio-header">
+            <h2>Our Portfolio</h2>
+            <p>Explore our latest web, mobile, and software projects that drive innovation.</p>
+            <div class="portfolio-filters">
+                <a href="#" class="active">All</a>
+                <a href="#">Web</a>
+                <a href="#">Mobile</a>
+                <a href="#">Apps</a>
             </div>
-            <div class="portfolio-card">
-                <h3>Project Two</h3>
-                <p>A mobile app for streamlined task management.</p>
+        </div>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="image/portfolio1.jpg" alt="Project One">
             </div>
-            <div class="portfolio-card">
-                <h3>Project Three</h3>
-                <p>Custom CRM solution for small businesses.</p>
+            <div class="portfolio-item">
+                <img src="image/portfolio2.jpg" alt="Project Two">
             </div>
+            <div class="portfolio-item">
+                <img src="image/portfolio3.jpg" alt="Project Three">
+            </div>
+            <div class="portfolio-item">
+                <img src="image/portfolio4.jpg" alt="Project Four">
+            </div>
+        </div>
+    </section>
+
+    <section class="team">
+        <div class="team-content">
+            <img src="image/team-founder.jpg" alt="Founder">
+            <h3>John Doe</h3>
+            <p>Founder & Lead Developer</p>
         </div>
     </section>
 
@@ -205,60 +180,70 @@
         <a href="contactPage.html" class="btn">Start Your Project</a>
     </section>
 
-    <footer>
-        <div class="footer-container">
-            <div class="footer-logo">
-                <img src="image/Codemantix logo(2).png" alt="Codemantix Collective Logo" />
-                <p class="footer-description">
-                    Nigeria's leading innovation lab, delivering cutting-edge web, mobile, and software solutions to transform your business ideas into reality.
+    <!-- FOOTER  -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <img src="image/Codemantix logo(2).png" alt="Codemantix Collective Logo" />
+                    <p class="footer-description">
+                        Nigeria's leading innovation lab, delivering cutting-edge web, mobile, and software solutions to transform your business ideas into reality.
+                    </p>
+                </div>
+                <div class="footer-links">
+                    <h4 class="footer-title">Quick Links</h4>
+                    <ul class="footer-list">
+                        <li><a href="index.html" class="footer-link">Home</a></li>
+                        <li><a href="#about" class="footer-link">About</a></li>
+                        <li><a href="servicepage.html" class="footer-link">Services</a></li>
+                        <li><a href="#portfolio" class="footer-link">Portfolio</a></li>
+                        <li><a href="#contact" class="footer-link">Contact</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-contact">
+                    <h4 class="footer-title">Contact Info</h4>
+                    <ul class="footer-contact-list">
+                        <li class="footer-contact-item">
+                            <i class="fas fa-envelope contact-icon"></i>
+                            <a href="mailto:codemantixcollective@gmail.com" class="contact-link">
+                                codemantixcollective@gmail.com
+                            </a>
+                        </li>
+                        <li class="footer-contact-item">
+                            <i class="fas fa-phone contact-icon"></i>
+                            <div class="contact-phones">
+                                <a href="tel:+2349014039678" class="contact-link">09014039678</a> /
+                                <a href="tel:+2348057032993" class="contact-link">08057032993</a>
+                            </div>
+                        </li>
+                        <li class="footer-contact-item">
+                            <i class="fab fa-instagram contact-icon"></i>
+                            <a href="https://www.instagram.com/codemantix" target="_blank" rel="noopener" class="contact-link">
+                                Instagram
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <hr class="footer-divider">
+
+            <div class="footer-bottom">
+                <p class="copyright">
+                    &copy <span id="currentYear"></span> Codemantix Collective. All rights reserved.
                 </p>
-            </div>
-            <div class="footer-links">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="contactPage.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-contact">
-                <h3>Contact Info</h3>
-                <ul>
-                    <li>
-                        <i class="fas fa-envelope"></i>
-                        <a href="mailto:codemantixcollective@gmail.com">codemantixcollective@gmail.com</a
-							>
-						</li>
-						<li>
-							<i class="fas fa-phone"></i>
-							<a href="tel:+2349014039678">09014039678</a> /
-                        <a href="tel:+2348057032993">08057032993</a>
-                    </li>
-                    <li>
-                        <i class="fab fa-instagram"></i>
-                        <a href="https://www.instagram.com/codemantix" target="_blank" rel="noopener">Instagram</a
-							>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<hr />
-			<div class="footer-bottom">
-				<p>
-					&copy; <span id="currentYear"></span> Codemantix Collective. All
-					rights reserved.
-				</p>
-				<div class="footer-legal">
-					<a href="/privacy-policy">Privacy Policy</a>
-                        <a href="/terms-of-service">Terms of Service</a>
+                <div class="footer-legal">
+                    <a href="/privacy-policy" class="legal-link">Privacy Policy</a>
+                    <a href="/terms-of-service" class="legal-link">Terms of Service</a>
+                </div>
             </div>
         </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="index.js"></script>
 </body>
 
